--- a/SOFI/estilos.css
+++ b/SOFI/estilos.css
@@ -1,7 +1,9 @@
 ﻿*
 {
-    margin: 0;
     padding:0;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 0;
 }
 body
 {
@@ -22,7 +24,9 @@ body
     width:90%;
     max-width:1000px;
     height:400px;
-    margin:15px auto
+    margin-left: 460px;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 header, .main, footer
