--- a/SOFI/Site1.Master
+++ b/SOFI/Site1.Master
@@ -6,7 +6,7 @@
 <head runat="server">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link rel="stylesheet" type="text/css" href="estilos.css" />
-    <title>UCOCAR | Inasistencia con Nombres </title>
+    <title>UCOCAR | SOF-I </title>
 </head>
     <header >
         <div class="logotipo">
