--- a/SOFI/orh.Master
+++ b/SOFI/orh.Master
@@ -12,7 +12,7 @@
 <body id="top">
     <form id="form1" runat="server">
 <!-- Top Background Image Wrapper -->
-<div class="bgded overlay" style="background-image:url('images/demo/backgrounds/01.jpg');"> 
+<div class="bgded overlay" style="background-image:url('images/01.jpg');"> 
           <!-- HEADER -->  
     <header id="header" class="hoc clear">
     <div id="logo"> 
@@ -27,7 +27,8 @@
             <li id="page2" runat="server"><a href="inasis_quincenal.aspx">Descargar txt</a></li>
             <li id="page3" runat="server"><a href="asign_estatus.aspx">Asignación de estatus</a></li>
             <li id="page4" runat="server"><a href="asistencias.aspx">Asistencias</a></li>
-            <li id="page5" runat="server"><asp:Button ID="Button1" runat="server" Text="Cerrar sesión" OnClick="Button1_Click" BackColor="#00CCFF" /></li>
+            <li id="page5" runat="server"><a href="editar_usuario.aspx">Editar/Eliminar Usuarios</a></li>
+            <li id="page6" runat="server"><asp:Button ID="Button1" runat="server" Text="Cerrar sesión" OnClick="Button1_Click" BackColor="#00CCFF" /></li>
 
         </ul>
       </nav>
